--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -22,12 +22,12 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let user of userFilter; let i = index">
+      <tr *ngFor="let user of users; let i = index">
         <th scope="row">{{ i + 1 }}</th>
         <td>{{ user.name }}</td>
         <td>{{ user.email}}</td>
         <td>
-          <button class="btn btn-danger">Delete</button>
+          <button class="btn btn-danger" (click)="delete(user.id)">Delete</button>
         </td>
       </tr>
 
