--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -5,7 +5,7 @@
         {{ title_page }}
       </div>
       <div class="col-md-8">
-        <input type="text" (keyup)="search($event)">
+        <app-search-input (searchValue)="search($event)" ></app-search-input>
       </div>
     </div>
 
