fix bug không lưu được user sau khi sửa

--- a/src/app/users/user-edit/user-edit.component.html
+++ b/src/app/users/user-edit/user-edit.component.html
@@ -5,11 +5,11 @@
   </div>
   <div class="form-group">
     <label>Name</label>
-    <input type="text" class="form-control" formControlName="name" aria-describedby="emailHelp">
+    <input type="text" class="form-control" formControlName="name" id="exampleInputEmail1" aria-describedby="emailHelp">
   </div>
   <div class="form-group">
     <label>Email</label>
-    <input type="text" class="form-control" formControlName="email">
+    <input type="text" class="form-control" formControlName="email" id="exampleInputPassword1">
   </div>
 
   <div class="form-group">
@@ -20,5 +20,5 @@
       </ng-container>
     </select>
   </div>
-  <button type="submit" class="btn btn-primary">Save change</button>
+  <button type="submit" class="btn btn-primary">Save</button>
 </form>
